# ComfyUI-Image-Resizing

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: ImgMods.py  apply_mask_to_image.py  calculate_aspect_ratio_extension.py  calculate_upscale_factor.py  calculate_upscale_rounds.py  extend_canvas_by_percentage.py  image_aspect_ratio_extractor.py  image_crop_by_percentage.py  image_resolution_extractor.py  mask_crop_by_percentage.py  remove_padding.py  resize_to_multiple.py  smart_image_resize.py
